--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c518f0ca",
+   "id": "1ed71ac6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "9c424352",
+   "id": "caaad006",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "bd6ceb79",
+   "id": "3c5dc58f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "a0e3742b",
+   "id": "6d72a461",
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "a6ba6263",
+   "id": "41edb2d1",
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "f291278c",
+   "id": "d2bd4079",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "7864f5df",
+   "id": "7a9296f2",
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "de97b33a",
+   "id": "e6b89c59",
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "2ac4ecd8",
+   "id": "d2e33006",
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "d714e747",
+   "id": "c90d34d7",
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "cd82a86b",
+   "id": "112251be",
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1008,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "3270bfb6",
+   "id": "bf9da98b",
    "metadata": {},
    "outputs": [
     {
@@ -1036,8 +1036,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "f536d63d",
+   "execution_count": 41,
+   "id": "56bfd9ee",
    "metadata": {},
    "outputs": [
     {
@@ -1051,7 +1051,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1063,8 +1063,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "7d2e69e8",
+   "execution_count": 42,
+   "id": "2f28b7c9",
    "metadata": {},
    "outputs": [
     {
@@ -1080,7 +1080,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1089,6 +1089,46 @@
     "# Determine data types for the student DataFrame.\n",
     "student_data_df.dtypes"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "6bc9cb4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add each prefix and suffix to remove to a list.\n",
+    "prefixes_suffixes = [\"Dr. \", \"Mr. \",\"Ms. \", \"Mrs. \", \"Miss \", \" MD\", \" DDS\", \" DVM\", \" PhD\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "189fa66e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/c7/qtvp99rn203cb1yq571lwnrh0000gp/T/ipykernel_18344/3790455543.py:3: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "  student_data_df[\"student_name\"] = student_data_df[\"student_name\"].str.replace(word,\"\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Iterate through the words in the \"prefixes_suffixes\" list and replace them with an empty space, \"\".\n",
+    "for word in prefixes_suffixes:\n",
+    "    student_data_df[\"student_name\"] = student_data_df[\"student_name\"].str.replace(word,\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "731d0724",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
