cleaning_student_data

--- a/cleaning_data.ipynb
+++ b/cleaning_data.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e30995d8",
+   "id": "9fea59ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4a08735f",
+   "id": "ab092a1a",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "07039604",
+   "id": "1fba2ad9",
    "metadata": {},
    "outputs": [
     {
@@ -265,9 +265,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "d82f3bd5",
-   "metadata": {},
+   "execution_count": 17,
+   "id": "50e30adb",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -387,7 +389,7 @@
        "7           7       Nicole Baker      F  12th           96.0        69.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,8 +401,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "e6ad5136",
+   "execution_count": 18,
+   "id": "89026c6c",
    "metadata": {},
    "outputs": [
     {
@@ -410,17 +412,20 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [13]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Determine data types for the school DataFrame.\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mschool_data_df\u001b[49m\u001b[38;5;241m.\u001b[39mdtypes\n",
+      "Input \u001b[0;32mIn [18]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Determine data types for the school DataFrame.\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mschool_data_df\u001b[49m\u001b[38;5;241m.\u001b[39mdtypes\n",
       "\u001b[0;31mNameError\u001b[0m: name 'school_data_df' is not defined"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "# Determine data types for the school DataFrame.\n",
+    "school_data_df.dtypes"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2eb4fe15",
+   "id": "c1bd78b6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -428,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1f7f242",
+   "id": "e25e19be",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -436,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd9e8431",
+   "id": "e2608ce4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -444,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8e9801f",
+   "id": "f9b9533a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -452,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1331b8e2",
+   "id": "834389a6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -460,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42da422e",
+   "id": "908ac6a6",
    "metadata": {},
    "outputs": [],
    "source": []
