--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1415,7 +1415,7 @@
   {
    "cell_type": "code",
    "execution_count": 345,
-   "id": "45c7213e",
+   "id": "cdb8022a",
    "metadata": {},
    "outputs": [
     {
@@ -1996,7 +1996,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa908acb",
+   "id": "cdbeeb09",
    "metadata": {},
    "source": [
     "4.7.7 Create a District Summary DataFrame"
@@ -2005,7 +2005,7 @@
   {
    "cell_type": "code",
    "execution_count": 354,
-   "id": "f51f5b9a",
+   "id": "8a3791e4",
    "metadata": {},
    "outputs": [
     {
@@ -2084,7 +2084,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a7ea530",
+   "id": "dc0c9433",
    "metadata": {},
    "source": [
     "4.7.8\n",
@@ -2228,7 +2228,7 @@
   {
    "cell_type": "code",
    "execution_count": 358,
-   "id": "980a5e6e",
+   "id": "4fd0791c",
    "metadata": {},
    "outputs": [
     {
@@ -2302,7 +2302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f08c922f",
+   "id": "4e4191a7",
    "metadata": {},
    "source": [
     "Set the Index to the School Name"
@@ -2311,7 +2311,7 @@
   {
    "cell_type": "code",
    "execution_count": 359,
-   "id": "ca24681b",
+   "id": "269c894f",
    "metadata": {},
    "outputs": [
     {
@@ -2350,7 +2350,7 @@
   {
    "cell_type": "code",
    "execution_count": 360,
-   "id": "4fbfa5c9",
+   "id": "9b9192d8",
    "metadata": {},
    "outputs": [
     {
@@ -2479,7 +2479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76f1a7ce",
+   "id": "41b6a1a2",
    "metadata": {},
    "source": [
     "4.8.2 Get the Student Count Per School"
@@ -2488,7 +2488,7 @@
   {
    "cell_type": "code",
    "execution_count": 361,
-   "id": "e7cd8843",
+   "id": "f3491a1d",
    "metadata": {},
    "outputs": [
     {
@@ -2527,7 +2527,7 @@
   {
    "cell_type": "code",
    "execution_count": 362,
-   "id": "cca8da2d",
+   "id": "39c75ef1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2539,7 +2539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2ce6a0c",
+   "id": "78aed8d7",
    "metadata": {},
    "source": [
     "4.8.3\n",
@@ -2549,7 +2549,7 @@
   {
    "cell_type": "code",
    "execution_count": 363,
-   "id": "2eb8878a",
+   "id": "04fe0580",
    "metadata": {},
    "outputs": [
     {
@@ -2588,7 +2588,7 @@
   {
    "cell_type": "code",
    "execution_count": 364,
-   "id": "78ffbff5",
+   "id": "29618065",
    "metadata": {},
    "outputs": [
     {
@@ -2626,7 +2626,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e4fd056",
+   "id": "f83b8de6",
    "metadata": {},
    "source": [
     "4.8.4\n",
@@ -2636,7 +2636,7 @@
   {
    "cell_type": "code",
    "execution_count": 365,
-   "id": "3d9aa59d",
+   "id": "4d9c899d",
    "metadata": {},
    "outputs": [
     {
@@ -2671,7 +2671,7 @@
   {
    "cell_type": "code",
    "execution_count": 366,
-   "id": "c66737a4",
+   "id": "9c1e7650",
    "metadata": {},
    "outputs": [
     {
@@ -2921,7 +2921,7 @@
   {
    "cell_type": "code",
    "execution_count": 367,
-   "id": "e5abf322",
+   "id": "0566a0b0",
    "metadata": {},
    "outputs": [
     {
@@ -2963,7 +2963,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2362a905",
+   "id": "9e434677",
    "metadata": {},
    "source": [
     "4.8.5\n",
@@ -2973,7 +2973,7 @@
   {
    "cell_type": "code",
    "execution_count": 368,
-   "id": "9e9daf0e",
+   "id": "87ced7c5",
    "metadata": {},
    "outputs": [
     {
@@ -3124,7 +3124,7 @@
   {
    "cell_type": "code",
    "execution_count": 369,
-   "id": "953d314c",
+   "id": "cab868fd",
    "metadata": {},
    "outputs": [
     {
@@ -3166,7 +3166,7 @@
   {
    "cell_type": "code",
    "execution_count": 370,
-   "id": "f9d3d380",
+   "id": "e15a81b3",
    "metadata": {},
    "outputs": [
     {
@@ -3208,7 +3208,7 @@
   {
    "cell_type": "code",
    "execution_count": 375,
-   "id": "06214a1e",
+   "id": "24e3905b",
    "metadata": {},
    "outputs": [
     {
@@ -3357,7 +3357,7 @@
   {
    "cell_type": "code",
    "execution_count": 376,
-   "id": "710b0763",
+   "id": "1569e6d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3368,7 +3368,7 @@
   {
    "cell_type": "code",
    "execution_count": 378,
-   "id": "ddfb426a",
+   "id": "74c1a80b",
    "metadata": {},
    "outputs": [
     {
@@ -3407,7 +3407,7 @@
   {
    "cell_type": "code",
    "execution_count": 379,
-   "id": "aa0e5a01",
+   "id": "7b34ec29",
    "metadata": {},
    "outputs": [
     {
@@ -3576,7 +3576,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58a62df2",
+   "id": "365a5207",
    "metadata": {},
    "source": [
     "4.8.7\n",
@@ -3586,7 +3586,7 @@
   {
    "cell_type": "code",
    "execution_count": 380,
-   "id": "c4cc01a8",
+   "id": "9bac6192",
    "metadata": {},
    "outputs": [
     {
@@ -3751,7 +3751,7 @@
   {
    "cell_type": "code",
    "execution_count": 381,
-   "id": "6488046e",
+   "id": "cd21635a",
    "metadata": {},
    "outputs": [
     {
@@ -3911,6 +3911,370 @@
     "\n",
     "per_school_summary_df.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f442f27",
+   "metadata": {},
+   "source": [
+    "4.9.1\n",
+    "Find the Highest Performing Schools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 383,
+   "id": "64ecc588",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>school_name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1858</td>\n",
+       "      <td>$1,081,356.00</td>\n",
+       "      <td>$582.00</td>\n",
+       "      <td>83.061895</td>\n",
+       "      <td>83.975780</td>\n",
+       "      <td>94.133477</td>\n",
+       "      <td>97.039828</td>\n",
+       "      <td>91.334769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>$1,043,130.00</td>\n",
+       "      <td>$638.00</td>\n",
+       "      <td>83.418349</td>\n",
+       "      <td>83.848930</td>\n",
+       "      <td>93.272171</td>\n",
+       "      <td>97.308869</td>\n",
+       "      <td>90.948012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1468</td>\n",
+       "      <td>$917,500.00</td>\n",
+       "      <td>$625.00</td>\n",
+       "      <td>83.351499</td>\n",
+       "      <td>83.816757</td>\n",
+       "      <td>93.392371</td>\n",
+       "      <td>97.138965</td>\n",
+       "      <td>90.599455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>2283</td>\n",
+       "      <td>$1,319,574.00</td>\n",
+       "      <td>$578.00</td>\n",
+       "      <td>83.274201</td>\n",
+       "      <td>83.989488</td>\n",
+       "      <td>93.867718</td>\n",
+       "      <td>96.539641</td>\n",
+       "      <td>90.582567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>962</td>\n",
+       "      <td>$585,858.00</td>\n",
+       "      <td>$609.00</td>\n",
+       "      <td>83.839917</td>\n",
+       "      <td>84.044699</td>\n",
+       "      <td>94.594595</td>\n",
+       "      <td>95.945946</td>\n",
+       "      <td>90.540541</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    School Type  Total Students Total School Budget  \\\n",
+       "school_name                                                           \n",
+       "Cabrera High School     Charter            1858       $1,081,356.00   \n",
+       "Thomas High School      Charter            1635       $1,043,130.00   \n",
+       "Griffin High School     Charter            1468         $917,500.00   \n",
+       "Wilson High School      Charter            2283       $1,319,574.00   \n",
+       "Pena High School        Charter             962         $585,858.00   \n",
+       "\n",
+       "                    Per Student Budget  Average Math Score  \\\n",
+       "school_name                                                  \n",
+       "Cabrera High School            $582.00           83.061895   \n",
+       "Thomas High School             $638.00           83.418349   \n",
+       "Griffin High School            $625.00           83.351499   \n",
+       "Wilson High School             $578.00           83.274201   \n",
+       "Pena High School               $609.00           83.839917   \n",
+       "\n",
+       "                     Average Reading Score  % Passing Math  % Passing Reading  \\\n",
+       "school_name                                                                     \n",
+       "Cabrera High School              83.975780       94.133477          97.039828   \n",
+       "Thomas High School               83.848930       93.272171          97.308869   \n",
+       "Griffin High School              83.816757       93.392371          97.138965   \n",
+       "Wilson High School               83.989488       93.867718          96.539641   \n",
+       "Pena High School                 84.044699       94.594595          95.945946   \n",
+       "\n",
+       "                     % Overall Passing  \n",
+       "school_name                             \n",
+       "Cabrera High School          91.334769  \n",
+       "Thomas High School           90.948012  \n",
+       "Griffin High School          90.599455  \n",
+       "Wilson High School           90.582567  \n",
+       "Pena High School             90.540541  "
+      ]
+     },
+     "execution_count": 383,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show top five schools.\n",
+    "top_schools = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending=False)\n",
+    "\n",
+    "top_schools.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d99aad82",
+   "metadata": {},
+   "source": [
+    "4.9.2\n",
+    "Find the Lowest Performing Schools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 384,
+   "id": "31006852",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>school_name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>3999</td>\n",
+       "      <td>$2,547,363.00</td>\n",
+       "      <td>$637.00</td>\n",
+       "      <td>76.842711</td>\n",
+       "      <td>80.744686</td>\n",
+       "      <td>66.366592</td>\n",
+       "      <td>80.220055</td>\n",
+       "      <td>52.988247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2949</td>\n",
+       "      <td>$1,884,411.00</td>\n",
+       "      <td>$639.00</td>\n",
+       "      <td>76.711767</td>\n",
+       "      <td>81.158020</td>\n",
+       "      <td>65.988471</td>\n",
+       "      <td>80.739234</td>\n",
+       "      <td>53.204476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>$1,910,635.00</td>\n",
+       "      <td>$655.00</td>\n",
+       "      <td>76.629414</td>\n",
+       "      <td>81.182722</td>\n",
+       "      <td>65.683922</td>\n",
+       "      <td>81.316421</td>\n",
+       "      <td>53.513884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4635</td>\n",
+       "      <td>$3,022,020.00</td>\n",
+       "      <td>$652.00</td>\n",
+       "      <td>77.289752</td>\n",
+       "      <td>80.934412</td>\n",
+       "      <td>66.752967</td>\n",
+       "      <td>80.862999</td>\n",
+       "      <td>53.527508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4761</td>\n",
+       "      <td>$3,094,650.00</td>\n",
+       "      <td>$650.00</td>\n",
+       "      <td>77.072464</td>\n",
+       "      <td>80.966394</td>\n",
+       "      <td>66.057551</td>\n",
+       "      <td>81.222432</td>\n",
+       "      <td>53.539172</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      School Type  Total Students Total School Budget  \\\n",
+       "school_name                                                             \n",
+       "Rodriguez High School    District            3999       $2,547,363.00   \n",
+       "Figueroa High School     District            2949       $1,884,411.00   \n",
+       "Huang High School        District            2917       $1,910,635.00   \n",
+       "Hernandez High School    District            4635       $3,022,020.00   \n",
+       "Johnson High School      District            4761       $3,094,650.00   \n",
+       "\n",
+       "                      Per Student Budget  Average Math Score  \\\n",
+       "school_name                                                    \n",
+       "Rodriguez High School            $637.00           76.842711   \n",
+       "Figueroa High School             $639.00           76.711767   \n",
+       "Huang High School                $655.00           76.629414   \n",
+       "Hernandez High School            $652.00           77.289752   \n",
+       "Johnson High School              $650.00           77.072464   \n",
+       "\n",
+       "                       Average Reading Score  % Passing Math  \\\n",
+       "school_name                                                    \n",
+       "Rodriguez High School              80.744686       66.366592   \n",
+       "Figueroa High School               81.158020       65.988471   \n",
+       "Huang High School                  81.182722       65.683922   \n",
+       "Hernandez High School              80.934412       66.752967   \n",
+       "Johnson High School                80.966394       66.057551   \n",
+       "\n",
+       "                       % Passing Reading  % Overall Passing  \n",
+       "school_name                                                  \n",
+       "Rodriguez High School          80.220055          52.988247  \n",
+       "Figueroa High School           80.739234          53.204476  \n",
+       "Huang High School              81.316421          53.513884  \n",
+       "Hernandez High School          80.862999          53.527508  \n",
+       "Johnson High School            81.222432          53.539172  "
+      ]
+     },
+     "execution_count": 384,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show top five schools.\n",
+    "bottom_schools = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending=True)\n",
+    "\n",
+    "bottom_schools.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46587ee8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d730492",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "839667b5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
