scores by school type.

--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1415,7 +1415,7 @@
   {
    "cell_type": "code",
    "execution_count": 345,
-   "id": "157a2099",
+   "id": "53177757",
    "metadata": {},
    "outputs": [
     {
@@ -1996,7 +1996,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45567ab6",
+   "id": "5525d6e2",
    "metadata": {},
    "source": [
     "4.7.7 Create a District Summary DataFrame"
@@ -2005,7 +2005,7 @@
   {
    "cell_type": "code",
    "execution_count": 354,
-   "id": "c5dce8f8",
+   "id": "564e24fe",
    "metadata": {},
    "outputs": [
     {
@@ -2084,7 +2084,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1709c97",
+   "id": "5a5f6f46",
    "metadata": {},
    "source": [
     "4.7.8\n",
@@ -2228,7 +2228,7 @@
   {
    "cell_type": "code",
    "execution_count": 358,
-   "id": "80f1f158",
+   "id": "21ee879c",
    "metadata": {},
    "outputs": [
     {
@@ -2302,7 +2302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8653a8fc",
+   "id": "e527d8f4",
    "metadata": {},
    "source": [
     "Set the Index to the School Name"
@@ -2311,7 +2311,7 @@
   {
    "cell_type": "code",
    "execution_count": 359,
-   "id": "7ed34da3",
+   "id": "fbc357bb",
    "metadata": {},
    "outputs": [
     {
@@ -2350,7 +2350,7 @@
   {
    "cell_type": "code",
    "execution_count": 360,
-   "id": "64ba4753",
+   "id": "d8df0391",
    "metadata": {},
    "outputs": [
     {
@@ -2479,7 +2479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "434f8842",
+   "id": "03cf1027",
    "metadata": {},
    "source": [
     "4.8.2 Get the Student Count Per School"
@@ -2488,7 +2488,7 @@
   {
    "cell_type": "code",
    "execution_count": 361,
-   "id": "3bb7fd20",
+   "id": "f1bd9ceb",
    "metadata": {},
    "outputs": [
     {
@@ -2527,7 +2527,7 @@
   {
    "cell_type": "code",
    "execution_count": 362,
-   "id": "1fcf0d72",
+   "id": "610667d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2539,7 +2539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "419a7b27",
+   "id": "62100773",
    "metadata": {},
    "source": [
     "4.8.3\n",
@@ -2549,7 +2549,7 @@
   {
    "cell_type": "code",
    "execution_count": 363,
-   "id": "da1428e5",
+   "id": "2fdc370a",
    "metadata": {},
    "outputs": [
     {
@@ -2588,7 +2588,7 @@
   {
    "cell_type": "code",
    "execution_count": 364,
-   "id": "168cb730",
+   "id": "517a8cb3",
    "metadata": {},
    "outputs": [
     {
@@ -2626,7 +2626,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8abf50d",
+   "id": "f653feb5",
    "metadata": {},
    "source": [
     "4.8.4\n",
@@ -2636,7 +2636,7 @@
   {
    "cell_type": "code",
    "execution_count": 365,
-   "id": "3a16f674",
+   "id": "5d8fae09",
    "metadata": {},
    "outputs": [
     {
@@ -2671,7 +2671,7 @@
   {
    "cell_type": "code",
    "execution_count": 366,
-   "id": "c0a80704",
+   "id": "2638d333",
    "metadata": {},
    "outputs": [
     {
@@ -2921,7 +2921,7 @@
   {
    "cell_type": "code",
    "execution_count": 367,
-   "id": "c2077204",
+   "id": "4fb016c8",
    "metadata": {},
    "outputs": [
     {
@@ -2963,7 +2963,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8945e4e",
+   "id": "32150ed3",
    "metadata": {},
    "source": [
     "4.8.5\n",
@@ -2973,7 +2973,7 @@
   {
    "cell_type": "code",
    "execution_count": 368,
-   "id": "c9611de8",
+   "id": "1acf6f80",
    "metadata": {},
    "outputs": [
     {
@@ -3124,7 +3124,7 @@
   {
    "cell_type": "code",
    "execution_count": 369,
-   "id": "da84810e",
+   "id": "e5e59e13",
    "metadata": {},
    "outputs": [
     {
@@ -3166,7 +3166,7 @@
   {
    "cell_type": "code",
    "execution_count": 370,
-   "id": "aec79543",
+   "id": "a91773c9",
    "metadata": {},
    "outputs": [
     {
@@ -3208,7 +3208,7 @@
   {
    "cell_type": "code",
    "execution_count": 375,
-   "id": "ae966c81",
+   "id": "f8a5f8f4",
    "metadata": {},
    "outputs": [
     {
@@ -3357,7 +3357,7 @@
   {
    "cell_type": "code",
    "execution_count": 376,
-   "id": "e3844626",
+   "id": "93a7a424",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3368,7 +3368,7 @@
   {
    "cell_type": "code",
    "execution_count": 378,
-   "id": "a9b96a7e",
+   "id": "ff665b79",
    "metadata": {},
    "outputs": [
     {
@@ -3407,7 +3407,7 @@
   {
    "cell_type": "code",
    "execution_count": 379,
-   "id": "3ee2329e",
+   "id": "73b496e8",
    "metadata": {},
    "outputs": [
     {
@@ -3576,7 +3576,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3844d2bf",
+   "id": "bda6f9e9",
    "metadata": {},
    "source": [
     "4.8.7\n",
@@ -3586,7 +3586,7 @@
   {
    "cell_type": "code",
    "execution_count": 380,
-   "id": "e8d7e5ec",
+   "id": "884dba6c",
    "metadata": {},
    "outputs": [
     {
@@ -3751,7 +3751,7 @@
   {
    "cell_type": "code",
    "execution_count": 381,
-   "id": "1ed57d1b",
+   "id": "00409eb0",
    "metadata": {},
    "outputs": [
     {
@@ -3914,7 +3914,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56a451d8",
+   "id": "f711171e",
    "metadata": {},
    "source": [
     "4.9.1\n",
@@ -3924,7 +3924,7 @@
   {
    "cell_type": "code",
    "execution_count": 383,
-   "id": "280c1cdc",
+   "id": "10957186",
    "metadata": {},
    "outputs": [
     {
@@ -4084,7 +4084,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43290fa0",
+   "id": "4dacdb71",
    "metadata": {},
    "source": [
     "4.9.2\n",
@@ -4094,7 +4094,7 @@
   {
    "cell_type": "code",
    "execution_count": 384,
-   "id": "fb1e8dc8",
+   "id": "8d753d39",
    "metadata": {},
    "outputs": [
     {
@@ -4254,7 +4254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d65159bf",
+   "id": "0510d345",
    "metadata": {},
    "source": [
     "4.10.1\n",
@@ -4264,7 +4264,7 @@
   {
    "cell_type": "code",
    "execution_count": 387,
-   "id": "f9243427",
+   "id": "8f53a13e",
    "metadata": {},
    "outputs": [
     {
@@ -4418,7 +4418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69e9b8c2",
+   "id": "a5c3925d",
    "metadata": {},
    "source": [
     "4.10.2\n",
@@ -4428,7 +4428,7 @@
   {
    "cell_type": "code",
    "execution_count": 391,
-   "id": "283d34e8",
+   "id": "23e688b3",
    "metadata": {},
    "outputs": [
     {
@@ -4474,7 +4474,7 @@
   {
    "cell_type": "code",
    "execution_count": 395,
-   "id": "707c92e8",
+   "id": "1f212913",
    "metadata": {},
    "outputs": [
     {
@@ -4519,7 +4519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db7fa336",
+   "id": "32c59cc2",
    "metadata": {},
    "source": [
     "4.10.3\n",
@@ -4529,7 +4529,7 @@
   {
    "cell_type": "code",
    "execution_count": 396,
-   "id": "7ec0fec1",
+   "id": "2da70b5c",
    "metadata": {},
    "outputs": [
     {
@@ -4635,7 +4635,7 @@
   {
    "cell_type": "code",
    "execution_count": 397,
-   "id": "fed247c5",
+   "id": "67d8b4d4",
    "metadata": {},
    "outputs": [
     {
@@ -4740,7 +4740,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f72fc0f7",
+   "id": "efa678ca",
    "metadata": {},
    "source": [
     "4.10.4\n",
@@ -4750,7 +4750,7 @@
   {
    "cell_type": "code",
    "execution_count": 399,
-   "id": "fe8e7eb1",
+   "id": "f8da3697",
    "metadata": {},
    "outputs": [
     {
@@ -4857,7 +4857,7 @@
   {
    "cell_type": "code",
    "execution_count": 400,
-   "id": "a9b11265",
+   "id": "bea6451d",
    "metadata": {},
    "outputs": [
     {
@@ -4963,7 +4963,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cae99da0",
+   "id": "87168838",
    "metadata": {},
    "source": [
     "4.11.1\n",
@@ -4973,7 +4973,7 @@
   {
    "cell_type": "code",
    "execution_count": 401,
-   "id": "617c08ed",
+   "id": "05ec950a",
    "metadata": {},
    "outputs": [
     {
@@ -5002,7 +5002,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f24ab6e8",
+   "id": "cef576dd",
    "metadata": {},
    "source": [
     "Group the Series on the Spending Ranges"
@@ -5011,7 +5011,7 @@
   {
    "cell_type": "code",
    "execution_count": 402,
-   "id": "dd8ecb78",
+   "id": "6282ade3",
    "metadata": {},
    "outputs": [
     {
@@ -5051,7 +5051,7 @@
   {
    "cell_type": "code",
    "execution_count": 403,
-   "id": "df22ed60",
+   "id": "2ed01fae",
    "metadata": {},
    "outputs": [
     {
@@ -5091,7 +5091,7 @@
   {
    "cell_type": "code",
    "execution_count": 404,
-   "id": "7684d7a9",
+   "id": "7a05380c",
    "metadata": {},
    "outputs": [
     {
@@ -5118,7 +5118,7 @@
   {
    "cell_type": "code",
    "execution_count": 405,
-   "id": "68d92b76",
+   "id": "259a5fac",
    "metadata": {},
    "outputs": [
     {
@@ -5145,7 +5145,7 @@
   {
    "cell_type": "code",
    "execution_count": 406,
-   "id": "235c370b",
+   "id": "69acbfe3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5156,7 +5156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73680377",
+   "id": "befc48cf",
    "metadata": {},
    "source": [
     "4.11.2\n",
@@ -5166,7 +5166,7 @@
   {
    "cell_type": "code",
    "execution_count": 407,
-   "id": "9bacba0d",
+   "id": "848ed0c7",
    "metadata": {},
    "outputs": [
     {
@@ -5521,7 +5521,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b58bf7f",
+   "id": "7e7400cc",
    "metadata": {},
    "source": [
     "4.11.3\n",
@@ -5531,7 +5531,7 @@
   {
    "cell_type": "code",
    "execution_count": 409,
-   "id": "f605683b",
+   "id": "a8c7ea30",
    "metadata": {},
    "outputs": [
     {
@@ -5566,7 +5566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44ba988e",
+   "id": "91a05d4c",
    "metadata": {},
    "source": [
     "4.11.4\n",
@@ -5576,7 +5576,7 @@
   {
    "cell_type": "code",
    "execution_count": 410,
-   "id": "f55f68a2",
+   "id": "818ba9b5",
    "metadata": {},
    "outputs": [
     {
@@ -5695,7 +5695,7 @@
   {
    "cell_type": "code",
    "execution_count": 411,
-   "id": "3f676bb8",
+   "id": "aec5ba26",
    "metadata": {},
    "outputs": [
     {
@@ -5816,7 +5816,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07a6f213",
+   "id": "9a136756",
    "metadata": {},
    "source": [
     "4.12.1\n",
@@ -5826,7 +5826,7 @@
   {
    "cell_type": "code",
    "execution_count": 412,
-   "id": "1777b637",
+   "id": "4b102dc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5837,7 +5837,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f5d95c2",
+   "id": "08fb8fc4",
    "metadata": {},
    "source": [
     "4.12.2\n",
@@ -5847,7 +5847,7 @@
   {
    "cell_type": "code",
    "execution_count": 413,
-   "id": "20ad6959",
+   "id": "b6ef22a4",
    "metadata": {},
    "outputs": [
     {
@@ -6030,7 +6030,7 @@
   {
    "cell_type": "code",
    "execution_count": 414,
-   "id": "8691ef0a",
+   "id": "5a04b061",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6048,7 +6048,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9be266e",
+   "id": "b7edf121",
    "metadata": {},
    "source": [
     "4.12.4\n",
@@ -6058,7 +6058,7 @@
   {
    "cell_type": "code",
    "execution_count": 415,
-   "id": "7278cafb",
+   "id": "b82f17ba",
    "metadata": {},
    "outputs": [
     {
@@ -6160,7 +6160,7 @@
   {
    "cell_type": "code",
    "execution_count": 416,
-   "id": "4906c0c4",
+   "id": "0cea6072",
    "metadata": {},
    "outputs": [
     {
@@ -6264,46 +6264,232 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32e77f0d",
+   "id": "e14a6c9e",
    "metadata": {},
-   "source": []
+   "source": [
+    "4.13.1\n",
+    "Group By School Type"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3a008899",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e68af1ef",
+   "execution_count": 417,
+   "id": "ffd4a9c8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Calculate averages for the desired columns.\n",
+    "type_math_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "\n",
+    "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "\n",
+    "type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "\n",
+    "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "\n",
+    "type_overall_passing = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1722a071",
+   "cell_type": "markdown",
+   "id": "53001817",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "4.13.2\n",
+    "Create a DataFrame for the Scores by School Type"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fafd3f26",
+   "execution_count": 418,
+   "id": "cd8fbf1b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>90.432244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
+       "District              76.956733              80.966636       66.548453   \n",
+       "\n",
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.586489          90.432244  \n",
+       "District             80.799062          53.672208  "
+      ]
+     },
+     "execution_count": 418,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assemble into DataFrame.\n",
+    "type_summary_df = pd.DataFrame({\n",
+    "          \"Average Math Score\" : type_math_scores,\n",
+    "          \"Average Reading Score\": type_reading_scores,\n",
+    "          \"% Passing Math\": type_passing_math,\n",
+    "          \"% Passing Reading\": type_passing_reading,\n",
+    "          \"% Overall Passing\": type_overall_passing})\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 419,
+   "id": "7544b949",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.5</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>97</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>67</td>\n",
+       "      <td>81</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Average Math Score Average Reading Score % Passing Math  \\\n",
+       "School Type                                                           \n",
+       "Charter                   83.5                  83.9             94   \n",
+       "District                  77.0                  81.0             67   \n",
+       "\n",
+       "            % Passing Reading % Overall Passing  \n",
+       "School Type                                      \n",
+       "Charter                    97                90  \n",
+       "District                   81                54  "
+      ]
+     },
+     "execution_count": 419,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Formatting\n",
+    "type_summary_df[\"Average Math Score\"] = type_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"Average Reading Score\"] = type_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Math\"] = type_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Reading\"] = type_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Overall Passing\"] = type_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27b32678",
+   "id": "0e5ec29e",
    "metadata": {},
    "outputs": [],
    "source": []
